multi-container-application/k8s-manifests/troubleshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: troubleshoot

spec:
  containers:
    - name: troubleshoot
      image: praqma/network-multitool
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
